--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button class="home" onclick="rifat()"><i class="fa-sharp fa-solid fa-bolt"></i></button>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="#">Bike-Items</a></li>
             <li><a href="#">Dashbord</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Products</a></li>
